[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["xpakx <55586470+xpakx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
